# cellular-automata

./: CMakeLists.txt  README.md  grid.cpp  grid.hpp  main.cpp  rules  simulation.cpp  simulation.hpp
src/: grid.cpp  grid.hpp  main.cpp  simulation.cpp  simulation.hpp
styles/: custom-dark.rgs  custom-light.rgs
